test/fixtures/diagnostics/type-checker/negative/satisfies-nominal-mismatch/input.tysh
namespace Samples.Satisfies.NominalMismatch

record Person(Name: string)

fun invalid(): int =
  42 satisfies Person
